k3s-userapps/inker/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inker
  namespace: inker
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/pod: inker
  type: ClusterIP
